--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,21 @@
     cursor: pointer;
 }
 
+@keyframes img-scale {
+  from {width:60px ;
+        height: 60px;
+        }
+  to {width:40px ;
+        height: 40px;}
+}
 .post-header__user-image {
     width: 40px;
     height: 40px;
     object-fit: cover;
     border-radius: 40px;
     margin-right: 10px;
+    animation-name: img-scale;
+    animation-duration: 2s;
 }
 
 .post-image-container {
