--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@
     align-items: center;
     margin-bottom: 10px;
     cursor: pointer;
+    transform: transform 2s;
 }
 
 @keyframes img-scale {
@@ -69,6 +70,11 @@
     margin-right: 10px;
     animation-name: img-scale;
     animation-duration: 2s;
+
+}
+.post-header:hover {
+    transform: scale(1.1);
+    padding-left: 4%;
 }
 
 .post-image-container {
@@ -103,7 +109,7 @@
     transition: transform 1s;
 }
 .like-button:hover {
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
 
 .user-name {
